crates/reinhardt-core/crates/macros/tests/ui/missing_to.stderr
error: table_name attribute is required in #[model(...)]
 --> tests/ui/rel/fail/missing_to.rs:6:12
  |
6 | pub struct Post {
  |            ^^^^
